--- a/src/routes/index.module.css
+++ b/src/routes/index.module.css
@@ -6,7 +6,6 @@
 .link {
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 1.75rem;
   position: relative;
 }
 
@@ -33,55 +32,73 @@
   left: 0;
 }
 
+.logo {
+  margin: 0 auto;
+  grid-row-start: span 3;
+}
+
+.avatar {
+  display: flex;
+  justify-content: center;
+}
+
 @media (min-width: 1180px) {
   .homepage {
     grid-template-columns: 2fr 4fr 6fr;
     padding: 3.75rem 0;
-    row-gap: 11.25rem;
+    row-gap: 6rem;
     column-gap: 1.25rem;
     max-width: 1180px;
   }
 
-  .logo {
-    margin: 0 auto;
-    grid-row-start: span 3;
-  }
-
   .avatar {
-    margin: 0 auto;
+    margin-left: 18.75rem;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1179px) {
   .homepage {
-    grid-template-columns: 2fr 5fr 5fr;
+    grid-template-columns: 1fr 3fr 4fr;
+    column-gap: 1rem;
     row-gap: 5rem;
-    padding: 3.75rem 1.25rem;
+    padding: 2rem 1rem;
     max-width: 1179px;
   }
 
-  .logo {
-    margin: 0 auto;
-    grid-row-start: span 3;
-  }
-
   .avatar {
-    margin: 0 auto;
+    margin-left: 50%;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .homepage {
-    grid-template-columns: 1fr;
-    row-gap: 2rem;
-    padding: 2.5rem 1.25rem;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    row-gap: 3.75rem;
+    column-gap: 1rem;
+    padding: 1.5rem 1rem;
+  }
+
+  .heading {
+    grid-column: 2 / span 3;
+  }
+
+  .logo {
+    width: 100%;
+    margin: 0;
+    grid-row-start: 1;
   }
 
   .avatar {
-    margin: 2rem 0;
+    grid-column: 3 / span 2;
+    grid-row: 2;
+    position: relative;
+  }
+
+  .avatar img {
+    position: absolute;
   }
 
   .summary {
-    margin: 1rem 0;
+    grid-column: 1 / span 4;
   }
 }
